[tool.poetry]
name = "pyoutput"
version = "0.1.0"
description = ""
authors = ["dueltech <ygodueltech@gmail.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.9"
protobuf = "^3.17.2"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"
black = "^21.5b2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
